Doin 2-2, added some diagrams

--- a/tex/1-4-crosslingual-analysis.tex
+++ b/tex/1-4-crosslingual-analysis.tex
@@ -366,7 +366,7 @@ INI.
 Обнаружение таких межъязыковых связей может быть нежелательно для разработчика инструментального средства и
 избежать этого можно путем последующей интрепретации решенных ограничений с учетом межъязыковых границ.
 
-\subsection{Онтология}
+\subsection{Онтология} \label{ssec:ontology}
 
 Онтологией обычно называется набор определенных знаний о предметной области.
 Однако, в контексте данной работы такой термин будет использоваться для иных целей -- им будет
