--- a/tex/rpz.bib
+++ b/tex/rpz.bib
@@ -329,3 +329,19 @@ language =     "russian"
   urldate = {15.04.2024},
   language =     "russian"
 }
+
+@online{JSON-RPC,
+  title = {JSON RPC протокол},
+  year = {2024},
+  url = {https://www.jsonrpc.org/specification},
+  urldate = {28.04.2024},
+  language =     "russian"
+}
+
+@online{goja,
+  title = {Нативная виртуальная машина JavaScript для Golang},
+  year = {2024},
+  url = {https://github.com/dop251/goja},
+  urldate = {28.04.2024},
+  language =     "russian"
+}
