--- a/tex/90-appendix1.tex
+++ b/tex/90-appendix1.tex
@@ -1,11 +1,12 @@
-\chapter{Картинки}
+\chapter{Протоколы мультиязыкового анализатора}
 \label{cha:appendix1}
 
-\blindtext
-\begin{figure}
-\centering
-\caption{Картинка в приложении. Страшная и ужасная.}
-\end{figure}
+% TODO: Протоколы
+\begin{minted}[linenos=true]{ts}
+    const a: 1 | "a" = 1
+    const b: 1 | "a" = "a"
+    const c: 1 | "a" = true
+\end{minted}
 
 %%% Local Variables: 
 %%% mode: latex
