Adapter left in 2-2

--- a/tex/1-1-scope.tex
+++ b/tex/1-1-scope.tex
@@ -222,7 +222,7 @@
 определенного инструмента, что может поменяться со временем. Поэтому, практическая реализация
 таких анализаторов это сложный процесс, требующий большого количества времени и поддержки.
 
-\subsection{Формирование выборки для анализа}
+\subsection{Формирование выборки для анализа} \label{ssec:selection}
 
 На первый взгляд формирование выборки кажется тривиальной проблемой. При моноязыковом анализе она
 решается использованием сторонних инструментов, позволяющих получить набор файлов для анализа.
