--- a/tex/2-2-implementation.tex
+++ b/tex/2-2-implementation.tex
@@ -70,8 +70,9 @@
 
 Каждый из используемых протоколов базируется на механизме JSON-RPC. Это позволяет учесть стандартные
 сценарии возникновения ошибок при передаче данных или во время анализа, а также устанавливает
-совместимость с популярными инструментами (в первую очередь LSP). Описание протоколов
-приведено в приложении \ref{cha:appendix1}. В качестве языка описания используется TypeScript так как
+совместимость с популярными инструментами (в первую очередь LSP). Описание всех протоколов
+в качестве общего протокола приведено в приложении \ref{cha:appendix1}.
+В качестве языка описания используется TypeScript так как
 его типовые определения имеют достаточно высокую выразительность и его типы напрямую могут быть отражены в типы JSON.
 
 \subsection{Реализация онтологии}
@@ -94,11 +95,91 @@
 
 \section{Провайдер конфигурации и кода}
 
+В задачи провайдера конфигурации входит:
+\begin{itemize}
+    \item создание <<слепка>> файловой системы проекта в виде списка дерева каталогов и файлов,
+    \item создание базы данных окружения системы (переменные окружения, версии системных утилит и библиотек).
+\end{itemize}
+
+Ключевой особенностью провайдера является формат результирующих данных -- после исполнения описанных задач, провайдер
+должен предоставить информацию в формате ограничений. Таким образом, информация об операционном окружении
+естественным образом включается в общую структуру графа областей. Это позволяет реализовывать разрешение имен
+не только на уровне языков, но и на уровне окружения, что может быть полезно в случае языков командной строки
+или языков сборки -- в них идентификаторы команд часто используются из содержимого файловой системы.
+
+Вопрос извлечения кода может быть рассмотрен в виде отдельного компонента анализатора (и ранее он так и
+рассматривался), но для упрощения архитектуры решено было совместить его с провайдером конфигурации.
+Задачей компонента извлечения является получение путей к файлам проекта, которые нужно проанализировать.
+В простейшем случае этого можно достичь путем рекурсивного обхода директорий с выборкой файлов с определенным
+расширением. Именно такой подход был избран для текущей реализации анализатора. Однако, выборка
+файлов может быть достаточно сложным процессом по ряду причин, описанных в подразделе \ref{ssec:selection}.
+
+Результаты извлечения конфигурации кешируются в виде файла \texttt{configuration.json} для дальнейшего переиспользования.
+Пути к файлам проекта также извлекаются и кешируются.
+
 \section{Мультиязыковой транслятор}
+
+В общем случае, использование отдельного транслятора, реализованного для конкретного языка отдельно
+от остальных трансляторов является неразумным решением, так как происходит потеря информации о переплетении
+фрагментов кода на разных языках в рамках одного большого фрагмента. Поэтому, логичным выглядит реализация
+<<мультиязыкового>> транслятора, который будет использовать различные монотрансляторы. Но чтобы такой
+транслятор работал корректно, нужен механизм 
+распознавания определенного языка программирования по входной строке. Таким образом,
+трансляция определенного языка будет вовлекать распознавание фрагментов языков, описанных через различные фрагменты кода.
+После распознавания такие фрагменты будут направлены соответствующим трансляторам.
+
+Таким образом, общий алгоритм трансляции выглядит следующим образом:
+\begin{enumerate}[1)]
+    \item на вход мультиязыковому транслятору поступает фрагмент кода,
+    \item транслятор использует инструмент распознавания для подбора соответствующего монотранслятора и отправляет ему этот фрагмент,
+    \item на вход транслятору поступает фрагмент кода на определенном языке,
+    \item транслятор использует любые подходящие средства для анализа и трансляции данного кода
+    (AST, CFG, абстрактная интерпретация и т.д.),
+    \item если транслятор обнаруживает строковый литерал он может отправить его на распознавание мультиязыковому транслятору, который
+    позволит определить язык избранного фрагмента и в дальнейшем направит этот фрагмент другому транслятору,
+    \item все трансляторы всех языков выводят ограничения в общий буфер мультиязыкового транслятора, для последующего разрешения.
+\end{enumerate}
+
+В качестве инструмента распознавания можно использовать инструменты машинного обучения для классификации. К примеру,
+на данный момент существуют довольно мощные инструменты по распознаванию кода основанные на нейронных сетях \cite{guesslang}.
+Однако, в данном анализаторе был использован более простой подход: путем отправки фрагмента всем имеющимся
+трансляторам можно сразу получить все необходимые данные -- в таком случае сообщение об ошибке придет от всех трансляторов, кроме одного.
+Результаты именно этого транслятора являются верными.
+
+Результаты трансляции различных монотрансляторов объединяются в контексте системного окружения. Объединение не
+вовлекает решения ограничений, происходит простое связывание узлов графа областей и переменных типовых ограничений.
+Результаты анализа кешируются в файл \texttt{constraints.json}. Следует заметить, что в текущей версии
+анализатора не реализован инкрементальный подход к извлечению конфигурации и трансляции, однако концептуальных
+препятствий к этому нет и такие процессы могут быть организованы инкрементально для повышения быстродействия.
 
 \section{Решатель ограничений}
 
+Алгоритм решения ограничений подробно описан в \cite{scope-graphs-static-analysis} и в данной работе не изменяется.
+Дополнительные ограничения, вводимые в данной работе служат лишь дополнительным источником информации для
+инструментального средства и не задействованы в алгоритме разрешения имен.
+
+Оригинальная статья описывает сценарий, при котором одной ссылке может сопоставиться несколько объявлений.
+В таком случае описывается процесс деления вычисления на ветви, по ветви на каждое возможное определение.
+Так как такая недетерминированность сильно замедляет вычисление, в данном анализаторе было принято решение
+принебречь полнотой анализа и брать первое совпадающее определение.
+
+В результате работы алгоритма решения ограничений формируется типовый контекст $\psi$ и известный граф областей
+$G$. С точки зрения решателя это означает, что можно сформировать \textit{решенные ограничения} -- ограничения,
+в которых не присутствуют неизвестные переменные. Такие ограничения можно называть фактами о проекте.
+
+Стоит заметить, что в случае неполного решения ограничений (алгоритм заходит в тупик при наличии необработанных ограничений),
+результат решения всё еще актуален и его можно использовать для дальнейшей отправки в инструментальное средство.
+К сожалению, авторами статьи не было формально доказано соответствие нерешенных ограничений действительно присутствующим
+ошибкам в коде, поэтому часть нерешенных ограничений не может быть использована в качестве источника информации об ошибках.
+
+Как и в оригинальной статье, инкрементальная реализация алгоритма не была рассмотрена по причине высокой сложности
+и некоторых технических вопросов в оригинальном описании алгоритма. Таким образом, решатель сохраняет кеш
+обработки ограничений и такой кеш инвалидируется при изменениях в коде. Однако, как и в случае с трансляцией,
+концептуальных препятствий к созданию инкрементального алгоритма решения ограничений нет.
+
 \section{Адаптер инструментального средства}
 
-% TODO: Протокол анализатора
+Адаптер представляет собой сервер LSP, умеющий исполнять определенные сценарии LSP \cite{lsp-usecases}.
+
+
 % TODO: Кэш компонентов
