--- a/tex/90-appendix1.tex
+++ b/tex/90-appendix1.tex
@@ -1,4 +1,4 @@
-\chapter{Протоколы мультиязыкового анализатора}
+\chapter{Протокол мультиязыкового анализатора}
 \label{cha:appendix1}
 
 % TODO: Протоколы
