--- a/tex/rpz.bib
+++ b/tex/rpz.bib
@@ -345,3 +345,19 @@ language =     "russian"
   urldate = {28.04.2024},
   language =     "russian"
 }
+
+@online{guesslang,
+  title = {Инструмент для распознавания языка программирования по входной строке},
+  year = {2024},
+  url = {https://github.com/yoeo/guesslang},
+  urldate = {28.04.2024},
+  language =     "russian"
+}
+
+@online{lsp-usecases,
+  title = {Сценарии использования LSP},
+  year = {2024},
+  url = {https://microsoft.github.io/language-server-protocol/specifications/lsp/3.17/specification/#languageFeatures},
+  urldate = {15.04.2024},
+  language =     "russian"
+}
