--- a/tex/rpz.tex
+++ b/tex/rpz.tex
@@ -62,7 +62,7 @@
 \include{1-4-crosslingual-analysis}
 \include{2-1-tooling}
 \include{2-2-implementation}
-
+\include{2-3-evaluation}
 
 \backmatter %% Здесь заканчивается нумерованная часть документа и начинаются ссылки и
             
