--- a/tex/2-2-implementation.tex
+++ b/tex/2-2-implementation.tex
@@ -180,6 +180,5 @@ $G$. С точки зрения решателя это означает, что
 \section{Адаптер инструментального средства}
 
 Адаптер представляет собой сервер LSP, умеющий исполнять определенные сценарии LSP \cite{lsp-usecases}.
-
-
-% TODO: Кэш компонентов
+% TODO: Кэш компонентов тут, анализатор stateless
+% TODO: Интеграция в вскод (LSP методы, UI и команды, подводные)
