--- a/tex/2-3-evaluation.tex
+++ b/tex/2-3-evaluation.tex
@@ -1,3 +1,5 @@
 \chapter{Оценка показателей анализатора на избранных тестовых проектах}
 
+%TODO: 3 примера, 6 сценариев. Подумать над видом скринов и статистикой
+
 \clearpage
