HOPEFULLY completed example 2 constraints

--- a/tex/2-3-evaluation.tex
+++ b/tex/2-3-evaluation.tex
@@ -1,5 +1,47 @@
 \chapter{Оценка показателей анализатора на избранных тестовых проектах}
 
-%TODO: 3 примера, 6 сценариев. Подумать над видом скринов и статистикой
+Для оценки анализатора (а также в первую очередь метода анализа) было создано три тестовых проекта.
+Проекты были созданы исходя из следующих критериев:
+\begin{itemize}
+    \item использование нескольких популярных языков в одном проекте,
+    \item каждый проект решает задачу в определенной уникальной предметной области,
+    \item используемые языки должны представлять различные парадигмы программирования,
+    \item каждый из проектов должен вовлекать различные сценарии использования LSP.
+\end{itemize}
 
+При анализе проектов была использована следующая онтология: % TODO:
+
+\section{Пример 1 -- C\# и Visual Basic}
+
+\subsection{Общее описание}
+
+Приложение, реализованное на C\# использует слой взаимодействия на уровне байткода IL и имеет в зависимостях библиотеку,
+реализованную на Visual Basic. Весь проект объединен через Solution файл. Такой сценарий часто встречается
+в legacy приложениях, при переходе кодовой базы с Visual Basic на C\#.
+
+Вовлекаемые языки: C\#, Visual Basic, XML (\texttt{.sln}, \texttt{.vbproj} и \texttt{.csproj} файлы).
+Предположительные предметные области: Энтерпрайз приложения, частные коммерческие решения.
+Рассмотренные парадигмы языков: ООП, структурированные данные.
+
+\subsection{Окружение}
+
+При извлечении кода могут быть использованы файлы проектов \texttt{.vbproj} и \texttt{.csproj}, в дальнейшей
+достаточно построение <<слепка>> файловой структуры проекта.
+
+\subsection{Трансляция и решение}
+
+Трансляция может вовлекать в себя стандартный reaching definition анализ \cite{static-program-analysis} и прямое отображение
+статической структуры классов и объектов на ограничения графов областей. В итоге трансляции и решения ограничений, получается
+результат, описанный в приложении \ref{cha:appendix2}.
+
+\subsection{Сценарии LSP}
+
+
+
+\section{Пример 2 -- С++, Python 3 и Shell}
+
+\section{Пример 3 -- Golang и JavaScript}
+
+% TODO: 3 примера, 6 сценариев.
+% Проект (описание, области, языки, парадигмы) -> необходимое/использованное окружение -> особенности трансляции -> ограничения -> подстановка -> скрины
 \clearpage
