--- a/tex/2-2-implementation.tex
+++ b/tex/2-2-implementation.tex
@@ -40,7 +40,7 @@
 \begin{enumerate}[1)]
     \item диаграммы представлены на русском языке, на довольно высоком уровне -- это сделано с целью упрощения
     понимания компонентов анализатора,
-    \item на диаграммах не представленно кеширование результатов анализа на различных этапах,
+    \item на диаграммах не представленно кеширование результатов анализа,
     \item на диаграмме деятельности представлен самый благоприятный сценарий, без возникновения ошибок -- в случае ошибок
     используется стандартный механизм возврата ошибок JSON-RPC \cite{JSON-RPC}.
 \end{enumerate}
@@ -114,9 +114,6 @@
 расширением. Именно такой подход был избран для текущей реализации анализатора. Однако, выборка
 файлов может быть достаточно сложным процессом по ряду причин, описанных в подразделе \ref{ssec:selection}.
 
-Результаты извлечения конфигурации кешируются в виде файла \texttt{configuration.json} для дальнейшего переиспользования.
-Пути к файлам проекта также извлекаются и кешируются.
-
 \section{Мультиязыковой транслятор}
 
 В общем случае, использование отдельного транслятора, реализованного для конкретного языка отдельно
@@ -148,11 +145,11 @@
 
 Результаты трансляции различных монотрансляторов объединяются в контексте системного окружения. Объединение не
 вовлекает решения ограничений, происходит простое связывание узлов графа областей и переменных типовых ограничений.
-Результаты анализа кешируются в файл \texttt{constraints.json}. Следует заметить, что в текущей версии
+Следует заметить, что в текущей версии
 анализатора не реализован инкрементальный подход к извлечению конфигурации и трансляции, однако концептуальных
 препятствий к этому нет и такие процессы могут быть организованы инкрементально для повышения быстродействия.
 
-\section{Решатель ограничений}
+\section{Решатель ограничений} \label{sec:solver}
 
 Алгоритм решения ограничений подробно описан в \cite{scope-graphs-static-analysis} и в данной работе не изменяется.
 Дополнительные ограничения, вводимые в данной работе служат лишь дополнительным источником информации для
@@ -173,12 +170,64 @@ $G$. С точки зрения решателя это означает, что
 ошибкам в коде, поэтому часть нерешенных ограничений не может быть использована в качестве источника информации об ошибках.
 
 Как и в оригинальной статье, инкрементальная реализация алгоритма не была рассмотрена по причине высокой сложности
-и некоторых технических вопросов в оригинальном описании алгоритма. Таким образом, решатель сохраняет кеш
-обработки ограничений и такой кеш инвалидируется при изменениях в коде. Однако, как и в случае с трансляцией,
+и некоторых технических вопросов в оригинальном описании алгоритма. Однако, как и в случае с трансляцией,
 концептуальных препятствий к созданию инкрементального алгоритма решения ограничений нет.
 
 \section{Адаптер инструментального средства}
 
 Адаптер представляет собой сервер LSP, умеющий исполнять определенные сценарии LSP \cite{lsp-usecases}.
-% TODO: Кэш компонентов тут, анализатор stateless
-% TODO: Интеграция в вскод (LSP методы, UI и команды, подводные)
+Сервер написан на TypeScript в первую очередь по причине присутствия нативного API для
+работы с методами LSP и соответствующими структурами данных.
+
+Конфигурация мультиязыкового анализатора создана с учетом stateless реализации, т.е. сам анализатор не хранит
+состояние вычислений после определенных этапов. Вместо этого, было решено вынести этот слой управления состоянием
+в инструментальное средство, в данном случае сервер LSP. Такой подход позволяет упростить анализатор и сделать его более гибким.
+
+Еще одной важной особенностью является принцип работы сервера -- в отличие от многих существующих серверов LSP для
+определенных языков, такой сервер не взаимодействует с файлами проекта напрямую. Единственная информация о проекте
+которая ему известна это решенные ограничения, т.е. факты об областях, идентификаторах и типах. С каждым ограничением
+связывается определенное местоположение -- откуда такое ограничение было получено. Такая конструкция подзволяет
+облеспечить сервер всей необходимой информацией по межъязыковым зависимостям.
+
+В связи с этим появляется несколько особенностей, которые делают применение мультиязыкового анализатора в сервере LSP
+специфическим:
+\begin{itemize}
+    \item инкрементальный анализ является нелинейным,
+    \item сообщения об ошибках не могут связаны с процессом решения ограничений.
+\end{itemize}
+
+В оригинальной статье \cite{scope-graphs-static-analysis} при разработке алгоритма разрешения имен, авторами
+учитывается очень важное свойство графов областей -- нелинейность при разрешении имен. Используя пример авторов:
+допустим, существует граф $G$ в котором ссылка $r_i$ в области $S$ разрешается в объявление $d_i$ в родительской области $S'$.
+Тогда, в большем графе $G'$, в котором объявление $d_j$ находится уже в самой области $S$, ссылка $r_i$ неизбежно
+будет разрешена именно в это объявление, а старое объявление из $S'$ будет затенено.
+Таким образом, при увеличении графа, предыдущие результаты решения графа могут оказаться неверными, что
+может обязывать в необходимости запуска решателя еще один раз.
+
+Как было сказано в \ref{sec:solver}, нерешенные ограничения не могут быть использованы напрямую как источник
+ошибок, по крайней мере это не было доказано. Именно поэтому список ограничений был дополнен \textit{ограничениями консистентности},
+которые позволяют инструментальному средству определить ошибочную ситуацию и составить соответствующий отчет.
+
+Стоит заметить, что гибкость мультиязыкового анализатора позволяет учесть обе вышеперечисленные особенности,
+если имеется возможность вовлечения эвристик о предметной области анализа -- в первую очередь о языках и
+их возможных связях. Например, запуск решателя на всех ограничениях после изменения или дополнения некоторых файлов не всегда
+необходим, так как такие файлы могут не изменять межъязыковые связи вовсе. Добавление таких эвристик
+часто присутствует в таких инструментах как LSP сервер и мультиязыковой анализ в данном случае не становится исключением.
+
+Для интеграции полученного сервера в инструментальное средство решено было использовать Visual Studio Code и соответствующий
+API. Для данной задачи было разработано небольшое расширение и предоставлены команды для работы с LSP сервером
+через UI. Такие команды описаны в таблице \ref{lsp-methods}. Стоит заметить, что локальная конфигурация команд и кеширование
+не описываются, так как это аспект реализации конкретного расширения для IDE.
+
+\begin{table}[H]
+    \caption{Команды для работы с мультиязыковым сервером LSP из Visual Studio Code}
+    \begin{tabular}{|p{4cm}|p{4cm}|p{7cm}|}
+    \hline Команда & Используемая информация & Описание команды \\ 
+    \hline \texttt{crossy/configure} & Путь к проекту & Сбор информации об операционном окружении проекта \\
+    \hline \texttt{crossy/translate} & Путь к онтологии & Трансляция кода проекта с сохранением полученных ограничений \\
+    \hline \texttt{crossy/solve} & Путь к онтологии & Решение ограничений и сохранение полученной подстановки \\
+    \hline \texttt{crossy/analyze} & Путь к онтологии & Выполнение трансляции и решения ограничений с применением полученной подстановки \\
+    \hline \texttt{crossy/reset} & -- & Удаление сохраненного кеша \\
+    \hline
+    \end{tabular}\label{lsp-methods}
+\end{table}
