--- a/tex/2-3-evaluation.tex
+++ b/tex/2-3-evaluation.tex
@@ -9,7 +9,7 @@
     \item каждый из проектов должен вовлекать различные сценарии использования LSP.
 \end{itemize}
 
-При анализе проектов была использована следующая онтология: % TODO:
+Все полученные ограничения находятся в открытом репозитории проекта в виде файлов кода на языке TypeScript. \footnote{https://github.com/UberDever/crosslingual-analysis/tree/master/projects/crossy/lsp-adapter/examples}
 
 \section{Пример 1 -- C\# и Visual Basic}
 
@@ -31,11 +31,24 @@
 \subsection{Трансляция и решение}
 
 Трансляция может вовлекать в себя стандартный reaching definition анализ \cite{static-program-analysis} и прямое отображение
-статической структуры классов и объектов на ограничения графов областей. В итоге трансляции и решения ограничений, получается
-результат, описанный в приложении \ref{cha:appendix2}.
+статической структуры классов и объектов на ограничения графов областей. При отображении не были использованы
+структурные предикаты, так как структура модулей и классов C\# не имеет определенной семантики в отношении
+типов и возможной вложенности. 
+
+\subsection{Онтология}
+
+Типы, добавленные в онтологию:
+\begin{itemize}
+    \item \texttt{Integer} -- целочисленное число неспецифицированной точности,
+    \item \texttt{Top} -- супертип всех возможных типов, также является маркером отсутствия информации об идентификаторе.
+\end{itemize}
 
 \subsection{Сценарии LSP}
 
+Для данного примера было решено реализовать два сценария использования, характерных для ООП языков: <<Type hierarchy>> 
+(получение иерархии типов) и <<Go to definition/declaration>> (перейти к объявлению/использованию).
+Предполагаемые примеры внешнего вида реализации таких сценариев показаны на рисунке \ref{fig:typehierarchy} и рисунке \ref{fig:gotodef}
+соответственно.
 
 
 \section{Пример 2 -- С++, Python 3 и Shell}
