--- a/tex/rpz.bib
+++ b/tex/rpz.bib
@@ -361,3 +361,11 @@ language =     "russian"
   urldate = {15.04.2024},
   language =     "russian"
 }
+
+@online{struct-tags,
+  title = {Теги структур в языке Golang},
+  year = {2024},
+  url = {https://go.dev/wiki/Well-known-struct-tags},
+  urldate = {28.04.2024},
+  language =     "russian"
+}
